Update package.json: add task start-prod to have port 9100

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start-prod": "next start -p 9100",
     "lint": "next lint"
   },
   "dependencies": {
